[gd_scene load_steps=6 format=2]

[ext_resource path="res://TamagotchiScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://TamagotchiMinigameScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://TextureButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Frame.tscn" type="PackedScene" id=4]
[ext_resource path="res://Tamagotchi.gd" type="Script" id=6]

[node name="Tamagotchi" type="Node2D"]
script = ExtResource( 6 )
__meta__ = {
"_edit_vertical_guides_": [  ]
}

[node name="Frame" parent="." instance=ExtResource( 4 )]

[node name="ButtonContainer" type="MarginContainer" parent="."]
margin_left = 32.0
margin_top = 180.0
margin_right = 160.0
margin_bottom = 204.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="ButtonContainer"]
margin_right = 128.0
margin_bottom = 24.0

[node name="HBoxContainer" type="HBoxContainer" parent="ButtonContainer/CenterContainer"]
margin_left = 15.0
margin_top = 4.0
margin_right = 112.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 11
alignment = 1

[node name="FoodButton" parent="ButtonContainer/CenterContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 0.0
margin_right = 16.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SleepButton" parent="ButtonContainer/CenterContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 27.0
margin_right = 43.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayButton" parent="ButtonContainer/CenterContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 54.0
margin_right = 70.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ExtraButton" parent="ButtonContainer/CenterContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 81.0
margin_right = 97.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Screen" parent="." instance=ExtResource( 1 )]

[node name="MinigameScreen" parent="." instance=ExtResource( 2 )]
visible = false
[connection signal="pressed" from="ButtonContainer/CenterContainer/HBoxContainer/FoodButton" to="." method="_on_FoodButton_pressed"]
[connection signal="pressed" from="ButtonContainer/CenterContainer/HBoxContainer/SleepButton" to="." method="_on_SleepButton_pressed"]
[connection signal="pressed" from="ButtonContainer/CenterContainer/HBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="ButtonContainer/CenterContainer/HBoxContainer/ExtraButton" to="." method="_on_ExtraButton_pressed"]
